[package]
name = "starstraw"
description = "Simple authentication back-end that feels like a game"
authors = ["hkau"]
license = "MIT"

version = "0.1.0"
edition = "2021"

documentation = "https://docs.rs/starstraw"
repository = "https://github.com/hkauso/starstraw"
categories = ["web-programming", "database"]

[package.metadata.docs.rs]
features = ["sqlite"]
no-default-features = true

[[example]]
name = "basic"
crate-type = ["bin"]

[features]
postgres = ["dorsal/postgres"]
mysql = ["dorsal/mysql"]
sqlite = ["dorsal/sqlite"]
default = ["dorsal/sqlite"] # for development

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
axum-macros = "0.4.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
dorsal = { version = "0.1.7", default-features = false }
dotenv = "0.15.0"
axum-extra = { version = "0.9.3", features = ["cookie"] }
regex = "1.10.5"
